Refactor & clean code
